--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-scroll-motion": "^0.3.2",
     "typescript": "4.9.4"
   },
